helper module update

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -4392,19 +4392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pipelines, Gridsearch, and Cross-Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_list=['Support Vector Machines', 'KNN', 'Logistic Regression', \n",
-    "              'Random Forest', 'Naive Bayes', \n",
-    "              'Stochastic Gradient Decent', 'Linear SVC', \n",
-    "              'Decision Tree']"
+    "## Gridsearch"
    ]
   },
   {
